// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`uni-builder rspack > should allow custom arco import config 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      /\\[\\\\\\\\/\\]@rsbuild\\[\\\\\\\\/\\]core\\[\\\\\\\\/\\]dist\\[\\\\\\\\/\\]/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "collectTypeScriptInfo": {
            "exportedEnum": false,
            "typeExports": true,
          },
          "env": {
            "coreJs": "3.47",
            "mode": "entry",
            "targets": [
              "> 0.01%",
              "not dead",
              "not op_mini all",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
              "plugins": [
                [
                  "<WORKSPACE>/node_modules/<PNPM_INNER>/@swc/plugin-styled-components/swc_plugin_styled_components.wasm",
                  {
                    "displayName": true,
                    "pure": false,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                ],
              ],
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": true,
                "refresh": true,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
          "rspackExperiments": {
            "import": [
              {
                "camelToDashComponentName": false,
                "libraryDirectory": "react-icon",
                "libraryName": "@arco-design/web-react/icon",
              },
              {
                "camelToDashComponentName": false,
                "libraryDirectory": "es",
                "libraryName": "@arco-design/web-react",
                "style": false,
              },
            ],
          },
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`uni-builder rspack > should allow filter arco import config 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      /\\[\\\\\\\\/\\]@rsbuild\\[\\\\\\\\/\\]core\\[\\\\\\\\/\\]dist\\[\\\\\\\\/\\]/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "collectTypeScriptInfo": {
            "exportedEnum": false,
            "typeExports": true,
          },
          "env": {
            "coreJs": "3.47",
            "mode": "entry",
            "targets": [
              "> 0.01%",
              "not dead",
              "not op_mini all",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
              "plugins": [
                [
                  "<WORKSPACE>/node_modules/<PNPM_INNER>/@swc/plugin-styled-components/swc_plugin_styled_components.wasm",
                  {
                    "displayName": true,
                    "pure": false,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                ],
              ],
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": true,
                "refresh": true,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`uni-builder rspack > should apply arco correctly 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      /\\[\\\\\\\\/\\]@rsbuild\\[\\\\\\\\/\\]core\\[\\\\\\\\/\\]dist\\[\\\\\\\\/\\]/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "collectTypeScriptInfo": {
            "exportedEnum": false,
            "typeExports": true,
          },
          "env": {
            "coreJs": "3.47",
            "mode": "entry",
            "targets": [
              "> 0.01%",
              "not dead",
              "not op_mini all",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
              "plugins": [
                [
                  "<WORKSPACE>/node_modules/<PNPM_INNER>/@swc/plugin-styled-components/swc_plugin_styled_components.wasm",
                  {
                    "displayName": true,
                    "pure": false,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                ],
              ],
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": true,
                "refresh": true,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
          "rspackExperiments": {
            "import": [
              {
                "camelToDashComponentName": false,
                "libraryDirectory": "es",
                "libraryName": "@arco-design/web-react",
                "style": true,
              },
              {
                "camelToDashComponentName": false,
                "libraryDirectory": "react-icon",
                "libraryName": "@arco-design/web-react/icon",
              },
            ],
          },
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`uni-builder rspack > should not apply arco when transformImport false 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      /\\[\\\\\\\\/\\]@rsbuild\\[\\\\\\\\/\\]core\\[\\\\\\\\/\\]dist\\[\\\\\\\\/\\]/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "collectTypeScriptInfo": {
            "exportedEnum": false,
            "typeExports": true,
          },
          "env": {
            "coreJs": "3.47",
            "mode": "entry",
            "targets": [
              "> 0.01%",
              "not dead",
              "not op_mini all",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
              "plugins": [
                [
                  "<WORKSPACE>/node_modules/<PNPM_INNER>/@swc/plugin-styled-components/swc_plugin_styled_components.wasm",
                  {
                    "displayName": true,
                    "pure": false,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                ],
              ],
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": true,
                "refresh": true,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`uni-builder rspack > should not apply arco when transformImport return custom array 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      /\\[\\\\\\\\/\\]@rsbuild\\[\\\\\\\\/\\]core\\[\\\\\\\\/\\]dist\\[\\\\\\\\/\\]/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "collectTypeScriptInfo": {
            "exportedEnum": false,
            "typeExports": true,
          },
          "env": {
            "coreJs": "3.47",
            "mode": "entry",
            "targets": [
              "> 0.01%",
              "not dead",
              "not op_mini all",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
              "plugins": [
                [
                  "<WORKSPACE>/node_modules/<PNPM_INNER>/@swc/plugin-styled-components/swc_plugin_styled_components.wasm",
                  {
                    "displayName": true,
                    "pure": false,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                ],
              ],
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": true,
                "refresh": true,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
          "rspackExperiments": {
            "import": [
              {
                "libraryName": "foo",
              },
            ],
          },
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`uni-builder webpack > should allow custom arco import config 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "and": [
          "<ROOT>",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      /\\[\\\\\\\\/\\]@rsbuild\\[\\\\\\\\/\\]core\\[\\\\\\\\/\\]dist\\[\\\\\\\\/\\]/,
    ],
    "resourceQuery": {
      "not": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
        "options": {
          "babelrc": false,
          "compact": false,
          "configFile": false,
          "plugins": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
              {
                "version": "legacy",
              },
            ],
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
              {
                "proposal": "minimal",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
              {
                "useESModules": true,
                "version": "7.26.10",
              },
            ],
            "<WORKSPACE>/packages/cli/babel-preset/src/pluginLockCorejsVersion.js",
            [
              "<ROOT>/compiled/babel-plugin-lodash/index.js",
              {},
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-import/lib/index.js",
              {
                "camel2DashComponentName": false,
                "libraryDirectory": "react-icon",
                "libraryName": "@arco-design/web-react/icon",
              },
              "@arco-design/web-react/icon",
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-import/lib/index.js",
              {
                "camel2DashComponentName": false,
                "libraryDirectory": "es",
                "libraryName": "@arco-design/web-react",
                "style": false,
              },
              "@arco-design/web-react",
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/react-refresh/babel.js",
              {
                "skipEnvCheck": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-styled-components/lib/index.js",
              {
                "displayName": true,
                "pure": false,
                "ssr": false,
                "transpileTemplateLiterals": true,
              },
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
              {
                "bugfixes": true,
                "corejs": {
                  "proposals": true,
                  "version": "3.40",
                },
                "exclude": [
                  "transform-typeof-symbol",
                ],
                "include": [
                  "@babel/plugin-transform-class-properties",
                ],
                "modules": false,
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "useBuiltIns": "entry",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
              {
                "development": true,
                "runtime": "automatic",
                "useBuiltIns": true,
                "useSpread": false,
              },
            ],
          ],
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`uni-builder webpack > should apply arco correctly 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "and": [
          "<ROOT>",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      /\\[\\\\\\\\/\\]@rsbuild\\[\\\\\\\\/\\]core\\[\\\\\\\\/\\]dist\\[\\\\\\\\/\\]/,
    ],
    "resourceQuery": {
      "not": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
        "options": {
          "babelrc": false,
          "compact": false,
          "configFile": false,
          "plugins": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
              {
                "version": "legacy",
              },
            ],
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
              {
                "proposal": "minimal",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
              {
                "useESModules": true,
                "version": "7.26.10",
              },
            ],
            "<WORKSPACE>/packages/cli/babel-preset/src/pluginLockCorejsVersion.js",
            [
              "<ROOT>/compiled/babel-plugin-lodash/index.js",
              {},
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-import/lib/index.js",
              {
                "camel2DashComponentName": false,
                "libraryDirectory": "es",
                "libraryName": "@arco-design/web-react",
                "style": true,
              },
              "@arco-design/web-react",
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-import/lib/index.js",
              {
                "camel2DashComponentName": false,
                "libraryDirectory": "react-icon",
                "libraryName": "@arco-design/web-react/icon",
              },
              "@arco-design/web-react/icon",
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/react-refresh/babel.js",
              {
                "skipEnvCheck": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-styled-components/lib/index.js",
              {
                "displayName": true,
                "pure": false,
                "ssr": false,
                "transpileTemplateLiterals": true,
              },
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
              {
                "bugfixes": true,
                "corejs": {
                  "proposals": true,
                  "version": "3.40",
                },
                "exclude": [
                  "transform-typeof-symbol",
                ],
                "include": [
                  "@babel/plugin-transform-class-properties",
                ],
                "modules": false,
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "useBuiltIns": "entry",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
              {
                "development": true,
                "runtime": "automatic",
                "useBuiltIns": true,
                "useSpread": false,
              },
            ],
          ],
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`uni-builder webpack > should not apply arco when transformImport false 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "and": [
          "<ROOT>",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      /\\[\\\\\\\\/\\]@rsbuild\\[\\\\\\\\/\\]core\\[\\\\\\\\/\\]dist\\[\\\\\\\\/\\]/,
    ],
    "resourceQuery": {
      "not": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
        "options": {
          "babelrc": false,
          "compact": false,
          "configFile": false,
          "plugins": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
              {
                "version": "legacy",
              },
            ],
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
              {
                "proposal": "minimal",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
              {
                "useESModules": true,
                "version": "7.26.10",
              },
            ],
            "<WORKSPACE>/packages/cli/babel-preset/src/pluginLockCorejsVersion.js",
            [
              "<ROOT>/compiled/babel-plugin-lodash/index.js",
              {},
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/react-refresh/babel.js",
              {
                "skipEnvCheck": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-styled-components/lib/index.js",
              {
                "displayName": true,
                "pure": false,
                "ssr": false,
                "transpileTemplateLiterals": true,
              },
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
              {
                "bugfixes": true,
                "corejs": {
                  "proposals": true,
                  "version": "3.40",
                },
                "exclude": [
                  "transform-typeof-symbol",
                ],
                "include": [
                  "@babel/plugin-transform-class-properties",
                ],
                "modules": false,
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "useBuiltIns": "entry",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
              {
                "development": true,
                "runtime": "automatic",
                "useBuiltIns": true,
                "useSpread": false,
              },
            ],
          ],
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`uni-builder webpack > should not apply arco when transformImport return custom array 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "and": [
          "<ROOT>",
          {
            "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
          },
        ],
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
      /\\[\\\\\\\\/\\]@rsbuild\\[\\\\\\\\/\\]core\\[\\\\\\\\/\\]dist\\[\\\\\\\\/\\]/,
    ],
    "resourceQuery": {
      "not": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
        "options": {
          "babelrc": false,
          "compact": false,
          "configFile": false,
          "plugins": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
              {
                "version": "legacy",
              },
            ],
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
              {
                "proposal": "minimal",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
              {
                "useESModules": true,
                "version": "7.26.10",
              },
            ],
            "<WORKSPACE>/packages/cli/babel-preset/src/pluginLockCorejsVersion.js",
            [
              "<ROOT>/compiled/babel-plugin-lodash/index.js",
              {},
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-import/lib/index.js",
              {
                "libraryName": "foo",
              },
              "foo",
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/react-refresh/babel.js",
              {
                "skipEnvCheck": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/babel-plugin-styled-components/lib/index.js",
              {
                "displayName": true,
                "pure": false,
                "ssr": false,
                "transpileTemplateLiterals": true,
              },
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
              {
                "bugfixes": true,
                "corejs": {
                  "proposals": true,
                  "version": "3.40",
                },
                "exclude": [
                  "transform-typeof-symbol",
                ],
                "include": [
                  "@babel/plugin-transform-class-properties",
                ],
                "modules": false,
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "useBuiltIns": "entry",
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
              {
                "development": true,
                "runtime": "automatic",
                "useBuiltIns": true,
                "useSpread": false,
              },
            ],
          ],
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;
